load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_module",
    "ocaml_ns_archive",
    "ocaml_ns_library",
    "ppx_executable",
)

################################################################
## STANZA 1: LIBRARY SNARKY_INTF
################################################################
SNARKY_INTF_MODULE_OPTS = []

SNARKY_INTF_DEPS_OPAM = [
    "core_kernel",
    "bignum",
]

#########
ocaml_ns_library(
    name = "#snarky_intf",
    submodules = {
        ":_Bigint_intf": "Bigint_intf",
        ":_Field": "Field",
        ":_Vector": "Vector",
    },
    visibility = [
        "//visibility:public",
        # "//snarky_universe:__pkg__",
        # "//src/base:__pkg__"
    ]
)

#############
ocaml_module(
    name = "_Bigint_intf",
    struct = "bigint_intf.ml",
    deps_opam = SNARKY_INTF_DEPS_OPAM,
    opts = SNARKY_INTF_MODULE_OPTS,
    ppx = ":ppx1.exe",
)

#############
ocaml_module(
    name = "_Field",
    deps_opam = SNARKY_INTF_DEPS_OPAM,
    opts = SNARKY_INTF_MODULE_OPTS,
    ppx = ":ppx1.exe",
    struct = "field.ml",
    deps = [
        # do not sort (buildifier)
        ":_Vector",
    ],
)

#############
ocaml_module(
    name = "_Vector",
    opts = SNARKY_INTF_MODULE_OPTS,
    ppx = ":ppx1.exe",
    struct = "vector.ml",
    deps_opam = SNARKY_INTF_DEPS_OPAM,
)

###############
ppx_executable(
    name = "ppx1.exe",
    deps_adjunct_opam = [
        "ppx_hash.runtime-lib",
        "ppx_sexp_conv.runtime-lib",
        "ppx_compare.runtime-lib",
        "bin_prot",
    ],
    deps_opam = [
        "ppx_bin_prot",
        "ppx_compare",
        "ppx_hash",
        "ppx_sexp_conv",
        "ppxlib",
    ],
    main = "//bzl/ppx/exe:ppxlib_driver",
    opts = [],
    visibility = [
        "//src/intf:__pkg__",
    ],
)
