load("@obazl_rules_ocaml//ocaml:rules.bzl", "ppx_executable", "ppx_module")

###############
ppx_executable(
    name = "ppx_jane",
    deps_adjunct_opam = [
        "ppx_expect.collector",
        "ppx_hash.runtime-lib",
        "ppx_sexp_conv.runtime-lib",
        "ppx_assert.runtime-lib",
        "ppx_compare.runtime-lib",
        "ppx_inline_test.runtime-lib",
        "ppx_bench.runtime-lib",
        "ppx_enumerate.runtime-lib",
        "ppx_module_timer.runtime",
    ],
    deps_opam = [
        "ppx_jane",
        "ppxlib",
    ],
    main = ":ppxlib_driver",
    visibility = [
        "//app/reformat-snarky:__pkg__",
        "//examples/merkle_update:__pkg__",
        "//examples/tutorial:__pkg__",
        "//meja/src:__pkg__",
        "//src/camlsnark_c/groth16_gpu_prover/test:__pkg__",
    ],
)

###############
ppx_executable(
    name = "ppxlib.metaquot",
    deps_opam = [
        "ppxlib",
        "ppxlib.metaquot",
    ],
    main = ":ppxlib_driver",
    visibility = [
        "//h_list/ppx:__pkg__",
        "//meja/ocaml:__pkg__",
    ],
)

###############
ppx_executable(
    name = "ppx_jane__ppx_deriving.enum",
    deps_adjunct_opam = [
        "ppx_expect.collector",
        "ppx_hash.runtime-lib",
        "ppx_sexp_conv.runtime-lib",
        "ppx_deriving.runtime",
        "ppx_assert.runtime-lib",
        "ppx_compare.runtime-lib",
        "ppx_inline_test.runtime-lib",
        "ppx_bench.runtime-lib",
        "ppx_enumerate.runtime-lib",
        "ppx_module_timer.runtime",
    ],
    deps_opam = [
        "ppx_deriving.enum",
        "ppx_jane",
        "ppxlib",
    ],
    main = ":ppxlib_driver",
    opts = [],
    visibility = [
        "//examples/election:__pkg__",
        "//examples/election_gpu:__pkg__",
        "//examples/elliptic_curve_operations:__pkg__",
        "//examples/imperative_test:__pkg__",
    ],
)

###############
ppx_executable(
    name = "ppx_jane__ppx_deriving.eq",
    deps_adjunct_opam = [
        "ppx_expect.collector",
        "ppx_hash.runtime-lib",
        "ppx_sexp_conv.runtime-lib",
        "ppx_deriving.runtime",
        "ppx_assert.runtime-lib",
        "ppx_compare.runtime-lib",
        "ppx_inline_test.runtime-lib",
        "ppx_bench.runtime-lib",
        "ppx_enumerate.runtime-lib",
        "ppx_module_timer.runtime",
    ],
    deps_opam = [
        "ppx_deriving.eq",
        "ppx_jane",
        "ppxlib",
    ],
    main = ":ppxlib_driver",
    opts = [],
    visibility = [
        "//bitstring_lib:__pkg__",
        "//fold_lib:__pkg__",
        "//group_map:__pkg__",
        "//interval_union:__pkg__",
        "//snarky_curve:__pkg__",
        "//snarky_integer:__pkg__",
        "//snarky_signature:__pkg__",
        "//sponge:__pkg__",
        "//tuple_lib:__pkg__",
    ],
)

###############
ppx_executable(
    name = "ppx_deriving_yojson__ppx_jane__ppx_deriving.std",
    deps_adjunct_opam = [
        "ppx_expect.collector",
        "yojson",
        "ppx_hash.runtime-lib",
        "ppx_deriving_yojson.runtime",
        "ppx_sexp_conv.runtime-lib",
        "ppx_deriving.runtime",
        "ppx_assert.runtime-lib",
        "ppx_compare.runtime-lib",
        "ppx_inline_test.runtime-lib",
        "ppx_bench.runtime-lib",
        "ppx_enumerate.runtime-lib",
        "ppx_module_timer.runtime",
    ],
    deps_opam = [
        "ppx_deriving.std",
        "ppx_deriving_yojson",
        "ppx_jane",
        "ppxlib",
    ],
    main = ":ppxlib_driver",
    opts = [],
    visibility = [
        "//examples/anonvote:__pkg__",
        "//examples/sfbw/ex_bools:__pkg__",
        "//examples/sfbw/ex_merkle_list:__pkg__",
        "//examples/sfbw/ex_merkle_tree:__pkg__",
        "//examples/sfbw/ex_merkle_tree_with_data:__pkg__",
        "//examples/sfbw/ex_preimage:__pkg__",
        "//examples/sfbw/ex_small_preimage:__pkg__",
    ],
)

################################################################
################################################################
ppx_module(
    name = "ppxlib_driver",
    deps_opam = ["ppxlib"],
    struct = ":ppxlib_driver.ml",
    visibility = ["//visibility:public"],
)

########
genrule(
    name = "gendriver",
    outs = ["ppxlib_driver.ml"],
    cmd = "\n".join([
        "echo \"(* GENERATED FILE - DO NOT EDIT *)\" > \"$@\"",
        "echo \"let () = Ppxlib.Driver.standalone ()\" >> \"$@\"",
    ]),
)
